add js and reservations

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,3 @@
-@media (min-width: 992px) {
-  .header__container {
-    padding: 100px;
-  }
-}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -32,7 +27,7 @@ body {
   background-color: #f2bc1b;
 }
 
-.section-heading {
+.section__heading {
   font-size: 3rem;
   text-transform: uppercase;
   font-weight: bold;
@@ -64,12 +59,12 @@ body {
 }
 .nav .wrapper {
   display: flex;
-  flex-direction: row;
   align-items: center;
   justify-content: space-between;
 }
 .nav__items {
   color: #fff;
+  font-size: 2rem;
   text-decoration: none;
   padding: 1em;
   text-transform: uppercase;
@@ -78,38 +73,82 @@ body {
   color: #f2bc1b;
 }
 .nav__logo {
-  width: 250px;
+  width: 160px;
+}
+.nav__btn {
+  color: white;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  padding: 0.1em;
+}
+.nav__container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.95);
+  transform: translateY(100%);
+  display: flex;
+  flex-direction: column;
+  padding: 4em 4em 2em;
+  align-items: center;
+  justify-content: center;
+}
+.nav__container--active {
+  transform: translateY(0);
+}
+.nav__exit {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  border: none;
+  background: none;
+  color: white;
+  font-size: 3rem;
+  z-index: 1001;
+  display: none;
+}
+.nav__exit--active {
+  display: block;
 }
 
 .header {
+  position: relative;
   color: #fff;
   overflow: hidden;
   height: 100vh;
 }
 .header__img {
-  background-image: url("../img/hero-img-lg.jpg");
+  background-image: url("../img/hero-img-sm.jpg");
   z-index: 0;
   background-position: center;
   background-size: cover;
 }
 .header__container {
+  position: absolute;
+  top: 80px;
   display: flex;
+  padding: 4em;
   flex-direction: column;
-  padding-top: 45vh;
-  margin-left: 25%;
-  align-items: flex-start;
+  text-align: center;
+  flex-wrap: wrap;
 }
 .header__title {
-  font-size: 4rem;
+  font-size: 1.5em;
   font-weight: bold;
 }
 .header__text {
-  margin: 1em 0;
+  font-size: 0.9em;
+  margin: 1em 0em 2em;
 }
 .header__btn {
-  margin-right: 1em;
+  font-size: 0.8em;
   background: none;
   border: 3px solid #f2bc1b;
+  margin: 0.5em;
 }
 .header__btn:hover {
   background-color: #f2bc1b;
@@ -126,11 +165,14 @@ body {
 }
 
 .aboutus {
-  margin-top: 5em;
+  margin: 5em 0;
   padding: 2em;
 }
+.aboutus__text {
+  margin-bottom: 3em;
+}
 .aboutus__container {
-  margin: 5em 1em;
+  margin: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -147,6 +189,8 @@ body {
 .aboutus__items {
   display: flex;
   justify-content: space-around;
+  flex-direction: column;
+  width: 100%;
 }
 
 .menu {
@@ -157,9 +201,10 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  text-align: center;
 }
 .menu__item {
-  width: 350px;
+  width: 300px;
   display: flex;
   flex-direction: column;
   margin: 0.5em;
@@ -174,15 +219,14 @@ body {
   text-transform: uppercase;
 }
 .menu__item-img-container {
-  position: relative;
-  height: 230px;
-  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 280px;
+  width: 250px;
   overflow: hidden;
 }
 .menu__item-img {
-  position: absolute;
-  right: 0;
-  bottom: 0;
   height: 100%;
   transition: transform 0.3s;
 }
@@ -193,25 +237,31 @@ body {
   margin: 0em;
   font-size: 1.4rem;
 }
-.menu .section-heading {
+.menu .section__heading {
   color: #fff;
 }
 
 .events {
   background-color: #9896d9;
-  padding: 5em 0;
+  padding: 5em 2em;
 }
 
 .carousel__container {
   display: flex;
   background-color: #fff;
-  width: 100%;
-  height: 450px;
+  flex-direction: column;
 }
 .carousel__container-text {
   padding: 2em;
   display: flex;
   flex-direction: column;
+}
+.carousel__container-img {
+  aspect-ratio: 1;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: top;
+     object-position: top;
 }
 .carousel__heading {
   font-size: 2.4rem;
@@ -225,6 +275,7 @@ body {
 
 .contact {
   margin-top: 5em;
+  padding: 0 2em;
 }
 .contact__heading {
   font-size: 2.8rem;
@@ -239,14 +290,15 @@ body {
   flex-direction: column;
   align-items: center;
   font-size: 1.8rem;
-  margin-bottom: 2em;
+  margin-bottom: 4em;
 }
 .contact__form-top {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   justify-content: space-between;
-  width: 600px;
+  flex-direction: column;
+  width: 300px;
 }
 .contact__form-top-line {
   display: flex;
@@ -255,6 +307,7 @@ body {
 .contact__form-down {
   display: flex;
   flex-direction: column;
+  width: 300px;
 }
 .contact__form-label {
   margin-bottom: 0.5em;
@@ -264,7 +317,7 @@ body {
   background-color: #ededed;
   border: none;
   border-radius: 0.5em;
-  width: 295px;
+  width: 100%;
   margin-bottom: 0.5em;
 }
 .contact__form-textarea {
@@ -272,7 +325,7 @@ body {
   background-color: #ededed;
   border: none;
   border-radius: 0.5em;
-  width: 600px;
+  width: 100%;
   min-height: 150px;
 }
 .contact__form-btn {
@@ -282,10 +335,12 @@ body {
 }
 .contact__info {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  text-align: center;
 }
 .contact__info-container {
-  margin: 5em 1em;
+  margin: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -295,11 +350,12 @@ body {
   color: #6258a6;
 }
 .contact__info-heading {
-  font-size: 2.5rem;
+  font-size: 2rem;
   color: #9896d9;
   margin: 1em 0;
 }
 .contact__social-media {
+  margin: 2em 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -316,21 +372,148 @@ body {
   width: 15em;
   margin-bottom: 3em;
 }
-.contact__social-media-container-icon {
+.contact__social-media-icon {
   font-size: 6rem;
   color: #6258a6;
   cursor: pointer;
 }
-.contact__social-media-container-icon:hover {
+.contact__social-media-icon:hover {
   color: #f2bc1b;
 }
 
 .footer {
   background-color: #9896d9;
+  line-height: 0;
   padding: 2em;
   text-align: center;
 }
 .footer__text {
   font-size: 2.5rem;
   color: #fff;
+}
+
+@media (min-width: 390px) {
+  .header__container {
+    top: 100px;
+  }
+  .header__title {
+    font-size: 3rem;
+  }
+  .header__text {
+    font-size: 1rem;
+  }
+  .header__btn {
+    font-size: 1.5rem;
+  }
+}
+@media (min-width: 576px) {
+  .header__container {
+    top: 250px;
+  }
+  .header__title {
+    font-size: 4rem;
+  }
+  .header__text {
+    font-size: 2rem;
+  }
+  .header__btn {
+    font-size: 1.8rem;
+  }
+  .nav__logo {
+    width: 250px;
+  }
+  .menu__item {
+    width: 450px;
+  }
+  .menu__item-img-container {
+    width: 400px;
+  }
+  .carousel__container {
+    flex-direction: row;
+  }
+  .carousel .contact__form-top {
+    width: 350px;
+  }
+  .carousel .contact__form-down {
+    width: 350px;
+  }
+}
+@media (min-width: 768px) {
+  .header__img {
+    background-image: url("../img/hero-img-md.jpg");
+  }
+  .header__container {
+    top: 300px;
+  }
+  .aboutus__items {
+    flex-direction: row;
+  }
+  .menu__item {
+    width: 280px;
+  }
+  .menu__item-img-container {
+    width: 240px;
+    height: 230px;
+  }
+  .contact__form-top {
+    flex-direction: row;
+    width: 600px;
+  }
+  .contact__form-down {
+    width: 600px;
+  }
+  .contact__form-input {
+    width: 295px;
+  }
+  .contact__info {
+    flex-direction: row;
+  }
+}
+@media (min-width: 992px) {
+  .nav__btn {
+    display: none;
+  }
+  .nav__container {
+    position: static;
+    height: 100%;
+    z-index: 0;
+    background: none;
+    flex-direction: row;
+    padding: 0;
+    justify-content: right;
+    transform: translateY(0);
+  }
+  .nav__exit {
+    display: none;
+  }
+  .nav__items {
+    font-size: 1.6rem;
+  }
+  .menu__item {
+    width: 325px;
+  }
+  .menu__item-img-container {
+    width: 285px;
+  }
+  .contact__info-heading {
+    font-size: 2.5rem;
+  }
+}
+@media (min-width: 1200px) {
+  .header__img {
+    background-image: url("../img/hero-img-lg.jpg");
+  }
+  .header__container {
+    position: static;
+    padding-top: 45vh;
+    margin-left: 30%;
+    align-items: flex-start;
+    text-align: left;
+  }
+  .menu__item {
+    width: 325px;
+  }
+  .menu__item-img-container {
+    width: 285px;
+  }
 }/*# sourceMappingURL=main.css.map */
