--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,4 @@
 @import "./colors";
-@import "./media";
 
 * {
 	box-sizing: border-box;
@@ -29,7 +28,7 @@ body {
 	background-color: $main-color;
 }
 
-.section-heading {
+.section__heading {
 	font-size: 3rem;
 	text-transform: uppercase;
 	font-weight: bold;
@@ -62,12 +61,12 @@ body {
 	background-color: rgba(0, 0, 0, 0.6);
 	.wrapper {
 		display: flex;
-		flex-direction: row;
 		align-items: center;
 		justify-content: space-between;
 	}
 	&__items {
 		color: $light;
+		font-size: 2rem;
 		text-decoration: none;
 		padding: 1em;
 		text-transform: uppercase;
@@ -77,46 +76,92 @@ body {
 		}
 	}
 	&__logo {
-		width: 250px;
-		//dodać mu hover
+		width: 160px;
+	}
+
+	&__btn {
+		color: white;
+		background: none;
+		border: none;
+		font-size: 2rem;
+		padding: 0.1em;
+	}
+
+	&__container {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100vh;
+		z-index: 1000;
+		background-color: rgba(0, 0, 0, 0.95);
+		transform: translateY(100%);
+		display: flex;
+		flex-direction: column;
+		padding: 4em 4em 2em;
+		align-items: center;
+		justify-content: center;
+
+		&--active {
+			transform: translateY(0);
+		}
+	}
+
+	&__exit {
+		position: absolute;
+		top: 24px;
+		right: 24px;
+		border: none;
+		background: none;
+		color: white;
+		font-size: 3rem;
+		z-index: 1001;
+		display: none;
+
+		&--active {
+			display: block;
+		}
 	}
 }
 
 //HEADER
 .header {
+	position: relative;
 	color: $light;
 	overflow: hidden;
 	height: 100vh;
 	&__img {
-		background-image: url("../img/hero-img-lg.jpg");
+		background-image: url("../img/hero-img-sm.jpg");
 		z-index: 0;
 		background-position: center;
 		background-size: cover;
 	}
 
 	&__container {
-		// padding: 30em 1em 0 37em;
+		position: absolute;
+		top: 80px;
 		display: flex;
+		padding: 4em;
 		flex-direction: column;
-		padding-top: 45vh;
-		margin-left: 25%;
-		// justify-content: center;
-		align-items: flex-start;
+		text-align: center;
+		flex-wrap: wrap;
 	}
 
 	&__title {
-		font-size: 4rem;
+		font-size: 1.5em;
 		font-weight: bold;
 	}
 
 	&__text {
-		margin: 1em 0;
+		font-size: 0.9em;
+		margin: 1em 0em 2em;
 	}
 
 	&__btn {
-		margin-right: 1em;
+		font-size: 0.8em;
 		background: none;
 		border: 3px solid $main-color;
+		margin: 0.5em;
 
 		&:hover {
 			background-color: $main-color;
@@ -138,15 +183,18 @@ body {
 //ABOUT US
 
 .aboutus {
-	margin-top: 5em;
+	margin: 5em 0;
 	padding: 2em;
 
+	&__text {
+		margin-bottom: 3em;
+	}
+
 	&__container {
-		margin: 5em 1em;
+		margin: 1em;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		// max-width: 15em;
 	}
 
 	&__icon {
@@ -162,6 +210,8 @@ body {
 	&__items {
 		display: flex;
 		justify-content: space-around;
+		flex-direction: column;
+		width: 100%;
 	}
 }
 
@@ -174,10 +224,11 @@ body {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
+		text-align: center;
 	}
 
 	&__item {
-		width: 350px;
+		width: 300px;
 		display: flex;
 		flex-direction: column;
 		margin: 0.5em;
@@ -193,16 +244,19 @@ body {
 		}
 
 		&-img-container {
-			position: relative;
-			height: 230px;
-			width: 300px;
+			// position: relative;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 280px;
+			width: 250px;
 			overflow: hidden;
 		}
 
 		&-img {
-			position: absolute;
-			right: 0;
-			bottom: 0;
+			// position: absolute;
+			// right: 0;
+			// bottom: 0;
 			height: 100%;
 			transition: transform 0.3s;
 
@@ -216,7 +270,7 @@ body {
 			font-size: 1.4rem;
 		}
 	}
-	.section-heading {
+	.section__heading {
 		color: $light;
 	}
 }
@@ -225,20 +279,24 @@ body {
 
 .events {
 	background-color: $light-violet;
-	padding: 5em 0;
+	padding: 5em 2em;
 }
 
 .carousel {
 	&__container {
 		display: flex;
 		background-color: $light;
-		width: 100%;
-		height: 450px;
+		flex-direction: column;
 
 		&-text {
 			padding: 2em;
 			display: flex;
 			flex-direction: column;
+		}
+		&-img {
+			aspect-ratio: 1;
+			object-fit: cover;
+			object-position: top;
 		}
 	}
 	&__heading {
@@ -253,16 +311,11 @@ body {
 	}
 }
 
-// .carousel-control-next, .carousel-control-prev{
-// 	color: $main-color;
-
-// // } te strzłki są niewidoczne
-//button ma być po prawej
-
 //KONTAKT
 
 .contact {
 	margin-top: 5em;
+	padding: 0 2em;
 
 	&__heading {
 		font-size: 2.8rem;
@@ -279,15 +332,15 @@ body {
 		flex-direction: column;
 		align-items: center;
 		font-size: 1.8rem;
-		margin-bottom: 2em;
+		margin-bottom: 4em;
 
 		&-top {
 			display: flex;
 			flex-wrap: wrap;
 			justify-content: center;
-
 			justify-content: space-between;
-			width: 600px;
+			flex-direction: column;
+			width: 300px;
 			&-line {
 				display: flex;
 				flex-direction: column;
@@ -297,6 +350,7 @@ body {
 		&-down {
 			display: flex;
 			flex-direction: column;
+			width: 300px;
 		}
 
 		&-label {
@@ -308,7 +362,7 @@ body {
 			background-color: $gray;
 			border: none;
 			border-radius: 0.5em;
-			width: 295px;
+			width: 100%;
 			margin-bottom: 0.5em;
 		}
 
@@ -317,7 +371,7 @@ body {
 			background-color: $gray;
 			border: none;
 			border-radius: 0.5em;
-			width: 600px;
+			width: 100%;
 			min-height: 150px;
 		}
 
@@ -329,10 +383,12 @@ body {
 	}
 	&__info {
 		display: flex;
+		flex-direction: column;
 		justify-content: space-between;
+		text-align: center;
 
 		&-container {
-			margin: 5em 1em;
+			margin: 1em;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
@@ -344,13 +400,14 @@ body {
 		}
 
 		&-heading {
-			font-size: 2.5rem;
+			font-size: 2rem;
 			color: $light-violet;
 			margin: 1em 0;
 		}
 	}
 
 	&__social-media {
+		margin: 2em 0;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -367,14 +424,14 @@ body {
 			justify-content: space-between;
 			width: 15em;
 			margin-bottom: 3em;
-			&-icon {
-				font-size: 6rem;
-				color: $dark-violet;
-				cursor: pointer;
+		}
+		&-icon {
+			font-size: 6rem;
+			color: $dark-violet;
+			cursor: pointer;
 
-				&:hover {
-					color: $main-color;
-				}
+			&:hover {
+				color: $main-color;
 			}
 		}
 	}
@@ -384,6 +441,7 @@ body {
 
 .footer {
 	background-color: $light-violet;
+	line-height: 0;
 	padding: 2em;
 	text-align: center;
 
@@ -394,3 +452,188 @@ body {
 }
 
 //zrobił mi się dodatkowy margines na dole, coś było jak to naprawić, ale nie pamiętam co
+
+@media (min-width: 390px) {
+	.header {
+		&__container {
+			top: 100px;
+		}
+
+		&__title {
+			font-size: 3rem;
+		}
+
+		&__text {
+			font-size: 1rem;
+		}
+
+		&__btn {
+			font-size: 1.5rem;
+		}
+	}
+}
+
+@media (min-width: 576px) {
+	.header {
+		&__container {
+			top: 250px;
+		}
+
+		&__title {
+			font-size: 4rem;
+		}
+
+		&__text {
+			font-size: 2rem;
+		}
+
+		&__btn {
+			font-size: 1.8rem;
+		}
+	}
+
+	.nav {
+		&__logo {
+			width: 250px;
+		}
+	}
+	.menu {
+		&__item {
+			width: 450px;
+
+			&-img-container {
+				width: 400px;
+			}
+		}
+	}
+	.carousel {
+		&__container {
+			flex-direction: row;
+		}
+
+		.contact {
+			&__form {
+				&-top {
+					width: 350px;
+				}
+				&-down {
+					width: 350px;
+				}
+			}
+		}
+	}
+}
+
+@media (min-width: 768px) {
+	.header {
+		&__img {
+			background-image: url("../img/hero-img-md.jpg");
+		}
+		&__container {
+			top: 300px;
+		}
+	}
+	.aboutus {
+		&__items {
+			flex-direction: row;
+		}
+	}
+
+	.menu {
+		&__item {
+			width: 280px;
+
+			&-img-container {
+				width: 240px;
+				height: 230px;
+			}
+		}
+	}
+
+	.contact {
+		&__form {
+			&-top {
+				flex-direction: row;
+				width: 600px;
+			}
+			&-down {
+				width: 600px;
+			}
+			&-input {
+				width: 295px;
+			}
+		}
+
+		&__info {
+			flex-direction: row;
+		}
+	}
+}
+
+@media (min-width: 992px) {
+	.nav {
+		&__btn {
+			display: none;
+		}
+
+		&__container {
+			position: static;
+			height: 100%;
+			z-index: 0;
+			background: none;
+			flex-direction: row;
+			padding: 0;
+			justify-content: right;
+			transform: translateY(0);
+		}
+		&__exit {
+			display: none;
+		}
+
+		&__items {
+			font-size: 1.6rem;
+		}
+	}
+	.menu {
+		&__item {
+			width: 325px;
+
+			&-img-container {
+				width: 285px;
+			}
+		}
+	}
+	.contact {
+		&__info {
+			&-heading {
+				font-size: 2.5rem;
+			}
+		}
+	}
+}
+
+@media (min-width: 1200px) {
+	.header {
+		&__img {
+			background-image: url("../img/hero-img-lg.jpg");
+		}
+
+		&__container {
+			position: static;
+			padding-top: 45vh;
+			margin-left: 30%;
+			align-items: flex-start;
+			text-align: left;
+		}
+	}
+
+	.menu {
+		&__item {
+			width: 325px;
+
+			&-img-container {
+				width: 285px;
+			}
+		}
+	}
+}
