--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,36 @@ body {
   background-color: #9896d9;
   padding: 5em 2em;
 }
+.events .carousel-caption {
+  left: 0;
+  right: 0;
+  bottom: 0;
+  padding: 40px 20px;
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.events .carousel-caption h3 {
+  margin-bottom: 0.8em;
+  font-weight: bold;
+}
+.events .carousel-indicators {
+  padding-bottom: 20px;
+}
+.events .cards-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.events .cards-container .card {
+  width: 350px;
+  margin: 1em;
+}
+.events .cards-container .card .card-body {
+  padding: 1em;
+}
+.events .cards-container .card .card-body .card-title {
+  margin-bottom: 0.5em;
+  font-weight: bold;
+}
 
 .contact {
   margin-top: 5em;
