--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import "./colors";
+@use "./colors" as *;
 
 * {
 	box-sizing: border-box;
@@ -310,36 +310,41 @@ body {
 .events {
 	background-color: $light-violet;
 	padding: 5em 2em;
+
+	.carousel-caption {
+		left: 0;
+		right: 0;
+		bottom: 0;
+		padding: 40px 20px;
+		background-color: rgba(0, 0, 0, 0.8);
+
+		h3 {
+			margin-bottom: 0.8em;
+			font-weight: bold;
+		}
+	}
+
+	.carousel-indicators {
+		padding-bottom: 20px;
+	}
+
+	.cards-container {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		.card {
+			width: 350px;
+			margin: 1em;
+			.card-body {
+				padding: 1em;
+				.card-title {
+					margin-bottom: 0.5em;
+					font-weight: bold;
+				}
+			}
+		}
+	}
 }
-
-// .carousel {
-// 	&__container {
-// 		display: flex;
-// 		background-color: $light;
-// 		flex-direction: column;
-
-// 		&-text {
-// 			padding: 2em;
-// 			display: flex;
-// 			flex-direction: column;
-// 		}
-// 		&-img {
-// 			aspect-ratio: 1;
-// 			object-fit: cover;
-// 			object-position: top;
-// 		}
-// 	}
-// 	&__heading {
-// 		font-size: 2.4rem;
-// 		font-weight: bold;
-// 		margin: 1em 0;
-// 	}
-
-// 	&__btn {
-// 		margin: 2em 0 0;
-// 		align-self: flex-end;
-// 	}
-// }
 
 //KONTAKT
 
@@ -483,8 +488,6 @@ body {
 	}
 }
 
-//zrobił mi się dodatkowy margines na dole, coś było jak to naprawić, ale nie pamiętam co
-
 //RESERVATION
 
 .reservations {
@@ -575,22 +578,6 @@ body {
 			}
 		}
 	}
-	// .carousel {
-	// 	&__container {
-	// 		flex-direction: row;
-	// 	}
-
-	// 	.contact {
-	// 		&__form {
-	// 			&-top {
-	// 				width: 350px;
-	// 			}
-	// 			&-down {
-	// 				width: 350px;
-	// 			}
-	// 		}
-	// 	}
-	// }
 }
 
 @media (min-width: 768px) {
