added rezerwacje.js and corrected header rwd

--- a/css/main.css
+++ b/css/main.css
@@ -134,36 +134,34 @@ body {
   position: relative;
   color: #fff;
   overflow: hidden;
-  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .header__img {
   background-image: url("../img/hero-img-sm.jpg");
   z-index: 0;
   background-position: center;
   background-size: cover;
+  height: 100vh;
 }
 .header__container {
-  position: absolute;
-  top: 80px;
-  display: flex;
   padding: 4em;
-  flex-direction: column;
   text-align: center;
-  flex-wrap: wrap;
 }
 .header__title {
-  font-size: 1.5em;
+  font-size: 3rem;
   font-weight: bold;
 }
 .header__text {
-  font-size: 0.9em;
+  font-size: 2rem;
   margin: 1em 0em 2em;
 }
 .header__btn {
-  font-size: 0.8em;
+  font-size: 1.6rem;
   background: none;
   border: 3px solid #f2bc1b;
-  margin: 0.5em;
 }
 .header__btn:hover {
   background-color: #f2bc1b;
@@ -460,29 +458,9 @@ body {
   text-transform: uppercase;
 }
 
-@media (min-width: 390px) {
-  .header__container {
-    top: 100px;
-  }
-  .header__title {
-    font-size: 3rem;
-  }
-  .header__text {
-    font-size: 1rem;
-  }
-  .header__btn {
-    font-size: 1.5rem;
-  }
-}
 @media (min-width: 576px) {
-  .header__container {
-    top: 250px;
-  }
   .header__title {
-    font-size: 4rem;
-  }
-  .header__text {
-    font-size: 2rem;
+    font-size: 3.5rem;
   }
   .header__btn {
     font-size: 1.8rem;
@@ -500,9 +478,6 @@ body {
 @media (min-width: 768px) {
   .header__img {
     background-image: url("../img/hero-img-md.jpg");
-  }
-  .header__container {
-    top: 300px;
   }
   .aboutus__items {
     flex-direction: row;
@@ -530,6 +505,9 @@ body {
   }
 }
 @media (min-width: 992px) {
+  .header__title {
+    font-size: 4rem;
+  }
   .nav__btn {
     display: none;
   }
@@ -564,10 +542,7 @@ body {
     background-image: url("../img/hero-img-lg.jpg");
   }
   .header__container {
-    position: static;
-    padding-top: 45vh;
     margin-left: 30%;
-    align-items: flex-start;
     text-align: left;
   }
   .menu__item {
