--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,87 @@
+.input-style {
+  padding: 0.6em 1.2em;
+  background-color: #ededed;
+  border: none;
+  border-radius: 0.5em;
+  width: 100%;
+  margin-bottom: 0.5em;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 1.8rem;
+}
+.form__top {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: space-around;
+  flex-direction: column;
+  min-width: 300px;
+}
+.form__top-line {
+  display: flex;
+  flex-direction: column;
+}
+.form__top-line--reservation {
+  text-align: center;
+  width: 285px;
+  margin-bottom: 1em;
+}
+.form__down {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+}
+.form__label {
+  margin-bottom: 0.5em;
+}
+.form__label--reservation {
+  font-weight: bold;
+  color: #6258a6;
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin-bottom: 0.5em;
+}
+.form__input {
+  padding: 0.6em 1.2em;
+  background-color: #ededed;
+  border: none;
+  border-radius: 0.5em;
+  width: 100%;
+  margin-bottom: 0.5em;
+}
+.form__textarea {
+  padding: 0.4em 0.8em;
+  background-color: #ededed;
+  border: none;
+  border-radius: 0.5em;
+  width: 100%;
+  min-height: 150px;
+}
+.form__btn {
+  margin: 2em 0;
+  align-self: flex-end;
+  width: 8em;
+}
+.form__btn--reservation {
+  align-self: center;
+}
+
+@media (min-width: 768px) {
+  .form__top {
+    flex-direction: row;
+    width: 600px;
+  }
+  .form__down {
+    width: 600px;
+  }
+  .form__input {
+    width: 295px;
+  }
+}
 * {
   box-sizing: border-box;
   margin: 0;
@@ -48,15 +132,6 @@ body {
 .btn:hover {
   background-color: #6258a6;
   color: #fff;
-}
-
-.input-style {
-  padding: 0.6em 1.2em;
-  background-color: #ededed;
-  border: none;
-  border-radius: 0.5em;
-  width: 100%;
-  margin-bottom: 0.5em;
 }
 
 ::-webkit-calendar-picker-indicator {
@@ -272,7 +347,7 @@ body {
 
 .events {
   background-color: #9896d9;
-  padding: 5em 2em;
+  padding: 5em 3em;
 }
 .events .carousel-caption {
   left: 0;
@@ -294,7 +369,7 @@ body {
   flex-wrap: wrap;
 }
 .events .cards-container .card {
-  margin: 1em;
+  margin: 1em 0;
 }
 .events .cards-container .card .card-body {
   padding: 1.5em;
@@ -306,7 +381,7 @@ body {
 
 .contact {
   margin-top: 5em;
-  padding: 0 2em;
+  padding: 0 3em;
 }
 .contact__heading {
   font-size: 2.8rem;
@@ -315,54 +390,6 @@ body {
 }
 .contact__text {
   margin: 1em 0 3em;
-}
-.contact__form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  font-size: 1.8rem;
-  margin-bottom: 4em;
-}
-.contact__form-top {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  justify-content: space-between;
-  flex-direction: column;
-  width: 300px;
-}
-.contact__form-top-line {
-  display: flex;
-  flex-direction: column;
-}
-.contact__form-down {
-  display: flex;
-  flex-direction: column;
-  width: 300px;
-}
-.contact__form-label {
-  margin-bottom: 0.5em;
-}
-.contact__form-input {
-  padding: 0.6em 1.2em;
-  background-color: #ededed;
-  border: none;
-  border-radius: 0.5em;
-  width: 100%;
-  margin-bottom: 0.5em;
-}
-.contact__form-textarea {
-  padding: 0.4em 0.8em;
-  background-color: #ededed;
-  border: none;
-  border-radius: 0.5em;
-  width: 100%;
-  min-height: 150px;
-}
-.contact__form-btn {
-  margin: 2em 0 0;
-  align-self: flex-end;
-  width: 8em;
 }
 .contact__info {
   display: flex;
@@ -429,33 +456,6 @@ body {
   margin: 2em 0;
   padding: 0 2em;
 }
-.reservations form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1em;
-  font-size: 1.8rem;
-}
-.reservations form__section {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  justify-content: space-between;
-  flex-direction: column;
-  width: 300px;
-}
-.reservations form .reservations-form__item {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-.reservations form .reservations-form__item-label {
-  font-weight: bold;
-  color: #6258a6;
-  margin-bottom: 0.5em;
-  font-size: 2rem;
-  text-transform: uppercase;
-}
 
 @media (min-width: 576px) {
   .header__title {
@@ -487,16 +487,6 @@ body {
   .menu__item-img-container {
     width: 240px;
     height: 230px;
-  }
-  .contact__form-top {
-    flex-direction: row;
-    width: 600px;
-  }
-  .contact__form-down {
-    width: 600px;
-  }
-  .contact__form-input {
-    width: 295px;
   }
   .contact__info {
     flex-direction: row;
@@ -549,5 +539,8 @@ body {
   }
   .menu__item-img-container {
     width: 285px;
+  }
+  .events {
+    padding: 5em;
   }
 }/*# sourceMappingURL=main.css.map */
