changed color events text background

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,7 @@
 $main-color: #f2bc1b;
 $light-violet: #9896d9;
 $dark-violet: #6258a6;
+$dark-violet-transparnet: #6258a6d0;
 $light: #fff;
 $dark: #000;
 $gray: #ededed;
