--- a/css/main.css
+++ b/css/main.css
@@ -354,7 +354,7 @@ body {
   right: 0;
   bottom: 0;
   padding: 40px 20px;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(98, 88, 166, 0.8156862745);
 }
 .events .carousel-caption h3 {
   margin-bottom: 0.8em;
