--- a/scss/main.scss
+++ b/scss/main.scss
@@ -305,7 +305,7 @@ body {
 		right: 0;
 		bottom: 0;
 		padding: 40px 20px;
-		background-color: rgba(0, 0, 0, 0.8);
+		background-color: $dark-violet-transparnet;
 
 		h3 {
 			margin-bottom: 0.8em;
