reservation view edit

--- a/css/main.css
+++ b/css/main.css
@@ -454,8 +454,8 @@ body {
 }
 
 .reservations {
-  margin: 2em 0;
-  padding: 0 2em;
+  padding: 8em 2em 4em;
+  height: 100vh;
 }
 
 @media (min-width: 576px) {
