--- a/scss/main.scss
+++ b/scss/main.scss
@@ -426,8 +426,9 @@ body {
 //RESERVATION
 
 .reservations {
-	margin: 2em 0;
-	padding: 0 2em;
+	// margin: 2em 0;
+	padding: 8em 2em 4em;
+	height: 100vh;
 }
 
 @media (min-width: 576px) {
