--- a/css/main.css
+++ b/css/main.css
@@ -442,6 +442,7 @@ body {
 }
 
 .footer {
+  width: 100%;
   background-color: #9896d9;
   line-height: 0;
   padding: 2em;
@@ -454,8 +455,7 @@ body {
 }
 
 .reservations {
-  padding: 8em 2em 4em;
-  height: 100vh;
+  padding: 4em 2em;
 }
 
 @media (min-width: 576px) {
