added info after send form

--- a/css/main.css
+++ b/css/main.css
@@ -280,7 +280,7 @@ body {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   width: 100%;
   text-align: center;
 }
@@ -481,6 +481,7 @@ body {
   }
   .aboutus__items {
     flex-direction: row;
+    align-items: flex-start;
   }
   .menu__item {
     width: 280px;
