--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,15 @@
 .form__btn--reservation {
   align-self: center;
 }
+.form__info-container {
+  text-align: center;
+  margin-bottom: 2em;
+  color: #d95252;
+  font-weight: bold;
+}
+.form__info {
+  color: #6258a6;
+}
 
 @media (min-width: 768px) {
   .form__top {
