--- a/css/main.css
+++ b/css/main.css
@@ -107,6 +107,42 @@ body {
   font-size: 1.6rem;
 }
 
+.arrow {
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.arrow span {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border-bottom: 5px solid #fff;
+  border-right: 5px solid #fff;
+  transform: rotate(45deg);
+  margin: -10px;
+  animation: scroll 2s infinite;
+}
+.arrow span:nth-child(2) {
+  animation-delay: -0.2s;
+}
+.arrow span:nth-child(3) {
+  animation-delay: -0.4s;
+}
+
+@keyframes scroll {
+  0% {
+    opacity: 0;
+    transform: rotate(45deg) translate(-20px, -20px);
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: rotate(45deg) translate(20px, 20px);
+  }
+}
 .wrapper {
   margin: 0 auto;
   width: 100%;
@@ -459,7 +495,7 @@ body {
 }
 .footer__text {
   margin: 0;
-  font-size: 2.5rem;
+  font-size: 2rem;
   color: #fff;
 }
 
@@ -482,6 +518,9 @@ body {
   }
   .menu__item-img-container {
     width: 400px;
+  }
+  .footer__text {
+    font-size: 2.5rem;
   }
 }
 @media (min-width: 768px) {
