--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,39 @@
+.wrapper {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.underline {
+  height: 6px;
+  width: 75px;
+  margin: 0.5em 0 2.5em;
+  background-color: #f2bc1b;
+}
+
+.section__heading {
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #000;
+}
+
+.btn {
+  padding: 1em;
+  max-width: 275px;
+  color: #fff;
+  font-weight: bold;
+  background-color: #f2bc1b;
+  text-transform: uppercase;
+  font-size: 1.8rem;
+  border-radius: 50px;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #6258a6;
+  color: #fff;
+}
+
 .input-style {
   padding: 0.6em 1.2em;
   background-color: #ededed;
@@ -143,42 +179,6 @@ body {
     transform: rotate(45deg) translate(20px, 20px);
   }
 }
-.wrapper {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1200px;
-}
-
-.underline {
-  height: 6px;
-  width: 75px;
-  margin: 0.5em 0 2.5em;
-  background-color: #f2bc1b;
-}
-
-.section__heading {
-  font-size: 3rem;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #000;
-}
-
-.btn {
-  padding: 1em;
-  max-width: 275px;
-  color: #fff;
-  font-weight: bold;
-  background-color: #f2bc1b;
-  text-transform: uppercase;
-  font-size: 1.8rem;
-  border-radius: 50px;
-  cursor: pointer;
-}
-.btn:hover {
-  background-color: #6258a6;
-  color: #fff;
-}
-
 ::-webkit-calendar-picker-indicator {
   cursor: pointer;
   padding: 5px;
@@ -542,6 +542,9 @@ body {
     flex-direction: row;
     align-items: flex-start;
   }
+  .events .carousel {
+    width: 60vw;
+  }
 }
 @media (min-width: 992px) {
   .header__title {
@@ -589,8 +592,5 @@ body {
   }
   .menu__item-img-container {
     width: 285px;
-  }
-  .events {
-    padding: 5em;
   }
 }/*# sourceMappingURL=main.css.map */
