--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
-@use "./colors" as *;
-@use "./components" as *;
-@use "./animations" as *;
+@use './colors' as *;
+@use './components' as *;
 
 * {
 	box-sizing: border-box;
@@ -14,7 +13,7 @@ html {
 }
 
 body {
-	font-family: "Montserrat", "sans-serif";
+	font-family: 'Montserrat', 'sans-serif';
 	font-size: 1.6rem;
 }
 
@@ -40,6 +39,7 @@ body {
 		}
 	}
 }
+
 @keyframes scroll {
 	0% {
 		opacity: 0;
@@ -51,42 +51,6 @@ body {
 	100% {
 		opacity: 0;
 		transform: rotate(45deg) translate(20px, 20px);
-	}
-}
-
-.wrapper {
-	margin: 0 auto;
-	width: 100%;
-	max-width: 1200px;
-}
-.underline {
-	height: 6px;
-	width: 75px;
-	margin: 0.5em 0 2.5em;
-	background-color: $main-color;
-}
-
-.section__heading {
-	font-size: 3rem;
-	text-transform: uppercase;
-	font-weight: bold;
-	color: $dark;
-}
-
-.btn {
-	padding: 1em;
-	max-width: 275px;
-	color: $light;
-	font-weight: bold;
-	background-color: $main-color;
-	text-transform: uppercase;
-	font-size: 1.8rem;
-	border-radius: 50px;
-	cursor: pointer;
-
-	&:hover {
-		background-color: $dark-violet;
-		color: $light;
 	}
 }
 
@@ -145,7 +109,6 @@ body {
 		padding: 4em 4em 2em;
 		align-items: center;
 		justify-content: center;
-		// transition: transform 0.3s;
 
 		&--active {
 			transform: translateY(0);
@@ -180,7 +143,7 @@ body {
 	align-items: center;
 	flex-direction: column;
 	&__img {
-		background-image: url("../img/hero-img-sm.jpg");
+		background-image: url('../img/hero-img-sm.jpg');
 		z-index: 0;
 		background-position: center;
 		background-size: cover;
@@ -325,7 +288,6 @@ body {
 			align-self: flex-end;
 			background-color: $main-color;
 			font-weight: bold;
-			// border-radius: 50px;
 		}
 	}
 	.section__heading {
@@ -503,7 +465,7 @@ body {
 @media (min-width: 768px) {
 	.header {
 		&__img {
-			background-image: url("../img/hero-img-md.jpg");
+			background-image: url('../img/hero-img-md.jpg');
 		}
 	}
 	.aboutus {
@@ -528,6 +490,11 @@ body {
 		&__info {
 			flex-direction: row;
 			align-items: flex-start;
+		}
+	}
+	.events {
+		.carousel {
+			width: 60vw;
 		}
 	}
 }
@@ -582,7 +549,7 @@ body {
 @media (min-width: 1200px) {
 	.header {
 		&__img {
-			background-image: url("../img/hero-img-lg.jpg");
+			background-image: url('../img/hero-img-lg.jpg');
 		}
 
 		&__container {
@@ -599,9 +566,5 @@ body {
 				width: 285px;
 			}
 		}
-	}
-
-	.events {
-		padding: 5em;
 	}
 }
